--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "test": "react-scripts test --env=jsdom"
   },
   "dependencies": {
     "express": "^4.16.2",
