--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: node_js
 node_js:
  - "node"
  - "8"
-script: cd client && yarn && yarn test 
+env:
+ - WORKDIR=.
+ - WORKDIR=client
+script: cd $WORKDIR && yarn && yarn test 
