--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
-    "bootstrap": "4",
+    "bootstrap": "^4.2.1",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-bootstrap": "^1.0.0-beta.3",
