--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^16.2.0",
     "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.2.0",
+    "react-popup": "^0.10.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
