--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: switch to client dir
-        uses: ./client
+        run: cd client
       - name: Install dependencies
         run: yarn
       - name: run tests
